// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generator - github-build-matrix > with angular > should match matrix value 1`] = `
{
  "include": [
    {
      "default-environment": "prod",
      "generatorOptions": {
        "authenticationType": "jwt",
        "clientFramework": "angular",
      },
      "java-version": "17",
      "job-name": "monolith-angular-jwt-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-auth-template-jdl",
      "legacy-template-name": "monolith-angular-jwt-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-angular-jwt-jdl",
      "sample-file": "monolith-client-auth-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "angular",
    },
    {
      "default-environment": "prod",
      "generatorOptions": {
        "authenticationType": "jwt",
        "clientFramework": "angular",
      },
      "java-version": "17",
      "job-name": "monolith-angular-jwt-i18n-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-auth-i18n-template-jdl",
      "legacy-template-name": "monolith-angular-jwt-i18n-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-angular-jwt-i18n-jdl",
      "sample-file": "monolith-client-auth-i18n-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "angular",
    },
    {
      "default-environment": "prod",
      "generatorOptions": {
        "authenticationType": "oauth2",
        "clientFramework": "angular",
      },
      "java-version": "17",
      "job-name": "monolith-angular-oauth2-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-auth-template-jdl",
      "legacy-template-name": "monolith-angular-oauth2-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-angular-oauth2-jdl",
      "sample-file": "monolith-client-auth-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "angular",
    },
    {
      "default-environment": "prod",
      "e2e": "false",
      "generatorOptions": {
        "authenticationType": "oauth2",
        "clientFramework": "angular",
        "prodDatabaseType": "mongodb",
      },
      "java-version": "17",
      "job-name": "monolith-angular-oauth2-mongodb-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-angular-auth-mongodb-template-jdl",
      "legacy-template-name": "monolith-angular-oauth2-mongodb-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-angular-oauth2-mongodb-jdl",
      "sample-file": "monolith-client-auth-database-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "angular",
    },
    {
      "default-environment": "prod",
      "generatorOptions": {
        "authenticationType": "oauth2",
        "clientFramework": "angular",
      },
      "java-version": "17",
      "job-name": "monolith-angular-oauth2-i18n-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-auth-i18n-template-jdl",
      "legacy-template-name": "monolith-angular-oauth2-i18n-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-angular-oauth2-i18n-jdl",
      "sample-file": "monolith-client-auth-i18n-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "angular",
    },
    {
      "default-environment": "prod",
      "java-version": "17",
      "job-name": "monolith-angular-jwt-i18n-dev",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-angular-jwt-i18n-dev",
      "legacy-template-name": "monolith-angular-jwt-i18n-dev",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-angular-jwt-i18n-dev",
      "sample-file": "monolith-angular-jwt-i18n-dev",
      "sample-folder": "samples/",
      "sample-type": "yo-rc",
      "samples-group": "angular",
    },
    {
      "default-environment": "prod",
      "e2e": "false",
      "generatorOptions": {
        "authenticationType": "jwt",
        "clientFramework": "angular",
        "prodDatabaseType": "mongodb",
      },
      "java-version": "17",
      "job-name": "monolith-angular-jwt-mongodb-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-auth-database-template-jdl",
      "legacy-template-name": "monolith-angular-jwt-mongodb-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-angular-jwt-mongodb-jdl",
      "sample-file": "monolith-client-auth-database-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "angular",
    },
    {
      "default-environment": "prod",
      "generatorOptions": {
        "clientFramework": "angular",
        "prodDatabaseType": "mssql",
      },
      "java-version": "17",
      "job-name": "monolith-angular-mssql-prod-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-database-prod-template-jdl",
      "legacy-template-name": "monolith-angular-mssql-prod-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-angular-mssql-prod-jdl",
      "sample-file": "monolith-client-database-prod-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "angular",
    },
    {
      "default-environment": "prod",
      "generatorOptions": {
        "clientFramework": "angular",
        "prodDatabaseType": "postgresql",
      },
      "java-version": "17",
      "job-name": "monolith-angular-postgresql-prod-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-database-prod-template-jdl",
      "legacy-template-name": "monolith-angular-postgresql-prod-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-angular-postgresql-prod-jdl",
      "sample-file": "monolith-client-database-prod-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "angular",
    },
  ],
}
`;

exports[`generator - github-build-matrix > with microservice > should match matrix value 1`] = `
{
  "include": [
    {
      "default-environment": "prod",
      "java-version": "17",
      "job-name": "microservice-oauth2-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "microservice-oauth2-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "microservice",
    },
  ],
}
`;

exports[`generator - github-build-matrix > with react > should match matrix value 1`] = `
{
  "include": [
    {
      "default-environment": "prod",
      "generatorOptions": {
        "authenticationType": "jwt",
        "clientFramework": "react",
      },
      "java-version": "17",
      "job-name": "monolith-react-jwt-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-auth-template-jdl",
      "legacy-template-name": "monolith-react-jwt-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-react-jwt-jdl",
      "sample-file": "monolith-client-auth-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "react",
    },
    {
      "default-environment": "prod",
      "generatorOptions": {
        "authenticationType": "jwt",
        "clientFramework": "react",
      },
      "java-version": "17",
      "job-name": "monolith-react-jwt-i18n-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-auth-i18n-template-jdl",
      "legacy-template-name": "monolith-react-jwt-i18n-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-react-jwt-i18n-jdl",
      "sample-file": "monolith-client-auth-i18n-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "react",
    },
    {
      "default-environment": "prod",
      "generatorOptions": {
        "authenticationType": "oauth2",
        "clientFramework": "react",
      },
      "java-version": "17",
      "job-name": "monolith-react-oauth2-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-auth-template-jdl",
      "legacy-template-name": "monolith-react-oauth2-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-react-oauth2-jdl",
      "sample-file": "monolith-client-auth-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "react",
    },
    {
      "default-environment": "prod",
      "generatorOptions": {
        "authenticationType": "oauth2",
        "clientFramework": "react",
      },
      "java-version": "17",
      "job-name": "monolith-react-oauth2-i18n-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-auth-i18n-template-jdl",
      "legacy-template-name": "monolith-react-oauth2-i18n-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-react-oauth2-i18n-jdl",
      "sample-file": "monolith-client-auth-i18n-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "react",
    },
    {
      "default-environment": "prod",
      "generatorOptions": {
        "clientFramework": "react",
        "prodDatabaseType": "mysql",
      },
      "java-version": "17",
      "job-name": "monolith-react-mysql-prod-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-database-prod-template-jdl",
      "legacy-template-name": "monolith-react-mysql-prod-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-react-mysql-prod-jdl",
      "sample-file": "monolith-client-database-prod-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "react",
    },
    {
      "default-environment": "prod",
      "e2e": "false",
      "generatorOptions": {
        "clientFramework": "react",
        "prodDatabaseType": "mongodb",
      },
      "java-version": "17",
      "job-name": "monolith-react-mongodb-prod-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-database-prod-template-jdl",
      "legacy-template-name": "monolith-react-mongodb-prod-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-react-mongodb-prod-jdl",
      "sample-file": "monolith-client-database-prod-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "react",
    },
    {
      "default-environment": "prod",
      "java-version": "17",
      "job-name": "monolith-react-oauth2-dev",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-react-oauth2-dev",
      "legacy-template-name": "monolith-react-oauth2-dev",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-react-oauth2-dev",
      "sample-file": "monolith-react-oauth2-dev",
      "sample-folder": "samples/",
      "sample-type": "yo-rc",
      "samples-group": "react",
    },
  ],
}
`;

exports[`generator - github-build-matrix > with samples > should match matrix value 1`] = `
{
  "include": [
    {
      "default-environment": "prod",
      "java-version": "17",
      "job-name": "microservice-oauth2-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "microservice-oauth2-jdl",
      "sample-type": "jdl",
      "samples-group": "samples",
    },
    {
      "default-environment": "prod",
      "java-version": "17",
      "job-name": "monolith-angular-jwt-i18n-dev",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-angular-jwt-i18n-dev",
      "sample-type": "yo-rc",
      "samples-group": "samples",
    },
    {
      "default-environment": "prod",
      "java-version": "17",
      "job-name": "monolith-client-auth-database-template-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-client-auth-database-template-jdl",
      "sample-type": "jdl",
      "samples-group": "samples",
    },
    {
      "default-environment": "prod",
      "java-version": "17",
      "job-name": "monolith-client-auth-i18n-template-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-client-auth-i18n-template-jdl",
      "sample-type": "jdl",
      "samples-group": "samples",
    },
    {
      "default-environment": "prod",
      "java-version": "17",
      "job-name": "monolith-client-auth-template-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-client-auth-template-jdl",
      "sample-type": "jdl",
      "samples-group": "samples",
    },
    {
      "default-environment": "prod",
      "java-version": "17",
      "job-name": "monolith-client-database-prod-template-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-client-database-prod-template-jdl",
      "sample-type": "jdl",
      "samples-group": "samples",
    },
    {
      "default-environment": "prod",
      "java-version": "17",
      "job-name": "monolith-react-oauth2-dev",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-react-oauth2-dev",
      "sample-type": "yo-rc",
      "samples-group": "samples",
    },
  ],
}
`;

exports[`generator - github-build-matrix > with vue > should match matrix value 1`] = `
{
  "include": [
    {
      "default-environment": "prod",
      "generatorOptions": {
        "authenticationType": "jwt",
        "clientFramework": "vue",
      },
      "java-version": "17",
      "job-name": "monolith-vue-jwt-i18n-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-auth-i18n-template-jdl",
      "legacy-template-name": "monolith-vue-jwt-i18n-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-vue-jwt-i18n-jdl",
      "sample-file": "monolith-client-auth-i18n-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "vue",
    },
    {
      "default-environment": "prod",
      "generatorOptions": {
        "authenticationType": "oauth2",
        "clientFramework": "vue",
      },
      "java-version": "17",
      "job-name": "monolith-vue-oauth2-i18n-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-auth-i18n-template-jdl",
      "legacy-template-name": "monolith-vue-oauth2-i18n-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-vue-oauth2-i18n-jdl",
      "sample-file": "monolith-client-auth-i18n-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "vue",
    },
    {
      "default-environment": "prod",
      "e2e": "false",
      "generatorOptions": {
        "clientFramework": "vue",
        "prodDatabaseType": "mongodb",
      },
      "java-version": "17",
      "job-name": "monolith-vue-mongodb-prod-jdl",
      "jwt-secret-key": "ZjY4MTM4YjI5YzMwZjhjYjI2OTNkNTRjMWQ5Y2Q0Y2YwOWNmZTE2NzRmYzU3NTMwM2NjOTE3MTllOTM3MWRkMzcyYTljMjVmNmQ0Y2MxOTUzODc0MDhhMTlkMDIxMzI2YzQzZDM2ZDE3MmQ3NjVkODk3OTVmYzljYTQyZDNmMTQ=",
      "legacy-sample-file": "monolith-client-auth-database-template-jdl",
      "legacy-template-name": "monolith-vue-mongodb-prod-jdl",
      "node-version": "22.12.0",
      "npm-version": "11.0.0",
      "os": "ubuntu-latest",
      "sample": "monolith-vue-mongodb-prod-jdl",
      "sample-file": "monolith-client-database-prod-template-jdl",
      "sample-folder": "samples/",
      "sample-type": "jdl",
      "samples-group": "vue",
    },
  ],
}
`;
